sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value getNombreValeur
    while (i+ecart<getNombreValeur){
                   ^AlgCombSort:12: error: Boolean does not take parameters
        echange(i,i+ecart)
               ^